--- a/templates/header.html
+++ b/templates/header.html
@@ -18,11 +18,11 @@
             <!-- Navigation-->
             <h1 class="header-text">Welcome</h1>
             <nav class="nav-bar">
-                    <button class="nav-button">Home</button>
-                    <button class="nav-button">Projects</button>
-                    <button class="nav-button">More About Me</button>
-                    <button class="nav-button">More About This Site</button>
-                    <button class="nav-button">Contact/Socials</button>
+                <div class="nav-button">| <a>Home</a> </button>
+                <div class="nav-button">| <a href="">Projects</a> </button>
+                <div class="nav-button">| <a href="">More About Me</a> </button>
+                <div class="nav-button">| <a href="">More About This Site</a> </button>
+                <div class="nav-button">| <a href="">Contact/Socials</a> |</button>
             </nav>
         
-        </div>
+        </div> 
