--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,5 +1,15 @@
 {% include "header.html" %}
-<div class="secondary-header">
-    <h2>My Projects</h2>
+<div class="container">
+    <div class="secondary-header">
+        <h2>My Projects</h2>
+    </div>
+    <div class="project-view-container">
+        <div class="project-images">
+        </div>
+        <div class="project-title">
+
+        </div>
+
+    </div>
 </div>
 {% include "footer.html" %}
