created a class for Project data in app.py re arranged divs in projects.html and added div for project description

--- a/static/styles.css
+++ b/static/styles.css
@@ -28,14 +28,18 @@
     margin: auto;
 }
 
-.project-view-container{
+.project-view-container {
     text-align: center;
 }
 
-.project-images{
+.project-images {
     text-align: center;
 }
 
-.project-title{
+.project-title {
+    text-align: center;
+}
+
+.project-description {
     text-align: center;
 }
