--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,12 +4,13 @@
         <h2>My Projects</h2>
     </div>
     <div class="project-view-container">
-        <div class="project-images">
-        </div>
         <div class="project-title">
 
         </div>
-
+        <div class="project-images">
+        </div>
+        <div class="project-description">
+        </div>
     </div>
 </div>
 {% include "footer.html" %}
