added div for link to project github

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,6 +11,8 @@
         </div>
         <div class="project-description">
         </div>
+        <div class="project-gh-url">
+        </div>
     </div>
 </div>
 {% include "footer.html" %}
