--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,13 +5,19 @@
     </div>
     <div class="project-view-container">
         <div class="project-title">
+            <b>Project Title Goes Here</b>
 
         </div>
         <div class="project-images">
+            <img src="" />
+            <img src="" />
         </div>
         <div class="project-description">
+            llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
         </div>
         <div class="project-gh-url">
+            <a href="https://github.com>Learn More</a>
         </div>
     </div>
 </div>
