--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,12 +9,12 @@
 
         </div>
         <div class="project-images">
-            <img src="" />
-            <img src="" />
+            <img src="/static/img/site_screenshot.png" />
+            <img src="/static/img/site_screenshot.png" />
         </div>
         <div class="project-description">
             llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
+lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
         </div>
         <div class="project-gh-url">
             <a href="https://github.com>Learn More</a>
