--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,22 +3,28 @@
     <div class="secondary-header">
         <h2>My Projects</h2>
     </div>
+
     <div class="project-view-container">
+
         <div class="project-title">
             <b>Project Title Goes Here</b>
-
         </div>
+
         <div class="project-images">
             <img src="/static/img/site_screenshot.png" />
             <img src="/static/img/site_screenshot.png" />
         </div>
-        <div class="project-description">
+
+        <span class="project-description">
             llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
-        </div>
+    lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
+        </span>
+
         <div class="project-gh-url">
             <a href="https://github.com>Learn More</a>
         </div>
+
     </div>
+
 </div>
 {% include "footer.html" %}
