added for loop to work on proper formatting of project page, want a 2 x n grid that maintains size as I add projects

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,6 +4,7 @@
         <h2>My Projects</h2>
     </div>
 
+    {% for n in range(2) %}
     <div class="project-view-container">
 
         <div class="project-title">
@@ -25,6 +26,7 @@
         </div>
 
     </div>
+    {% endfor %}
 
 </div>
 {% include "footer.html" %}
