--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,28 +4,34 @@
         <h2>My Projects</h2>
     </div>
 
-    {% for n in range(2) %}
-    <div class="project-view-container">
+    {% for n in range(project_count) %}
+        {% if n % 2 == 0 %}
+            <div class="project-row">
+        {% endif %}
+        <div class="project-view-container">
 
-        <div class="project-title">
-            <b>Project Title Goes Here</b>
+            <div class="project-title">
+                <b>Project Title Goes Here</b>
+            </div>
+
+            <div class="project-images">
+                <img src="/static/img/site_screenshot.png" />
+                <img src="/static/img/site_screenshot.png" />
+            </div>
+
+            <span class="project-description">
+                llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
+        lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
+            </span>
+
+            <div class="project-gh-url">
+                <a href="https://github.com>Learn More">Github</a>
+            </div>
+
         </div>
-
-        <div class="project-images">
-            <img src="/static/img/site_screenshot.png" />
-            <img src="/static/img/site_screenshot.png" />
-        </div>
-
-        <span class="project-description">
-            llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-    lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
-        </span>
-
-        <div class="project-gh-url">
-            <a href="https://github.com>Learn More</a>
-        </div>
-
-    </div>
+        {% if n % 2 == 1 %}
+            </div>
+        {% endif %}
     {% endfor %}
 
 </div>
