--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,14 +4,14 @@
         <h2>My Projects</h2>
     </div>
 
-    {% for n in range(project_count) %}
-        {% if n % 2 == 0 %}
+    {% for project_row in projects %}
+        {% if project_row.id % 2 == 0 %}
             <div class="project-row">
         {% endif %}
         <div class="project-view-container">
 
             <div class="project-title">
-                <b>Project Title Goes Here</b>
+                <b>{{ project_row.title }}</b>
             </div>
 
             <div class="project-images">
@@ -20,16 +20,15 @@
             </div>
 
             <span class="project-description">
-                llorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-        lorem ipsum lorem ipsum lorem ipsum lorem ipsum more text goes here lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum orem ipsum
+                {{ project_row.description }}
             </span>
 
             <div class="project-gh-url">
-                <a href="https://github.com>Learn More">Github</a>
+                <a href="https://github.com">{{ project_row.github_url }}</a>
             </div>
 
         </div>
-        {% if n % 2 == 1 %}
+        {% if project_row.id % 2 == 1 %}
             </div>
         {% endif %}
     {% endfor %}
