--- a/templates/header.html
+++ b/templates/header.html
@@ -16,13 +16,16 @@
             <img class="top-img" src="../static/img/top-img.webp"/>
 
             <!-- Navigation-->
-            <h1 class="header-text">Welcome</h1>
+            <h1 class="center-text">Welcome</h1>
             <nav class="nav-bar">
                 <div class="nav-button">| <a href="{{ url_for('home') }}">Home</a> </button>
-                <div class="nav-button">| <a href="{{ url_for('show_projects_page') }}">Projects</a> </button>
+                <div class="nav-button">| <a href="{{ url_for('projects') }}">Projects</a> </button>
                 <div class="nav-button">| <a href="{{ url_for('show_about_me_page') }}">More About Me</a> </button>
                 <div class="nav-button">| <a href="{{ url_for('show_about_site_page') }}">More About This Site</a> </button>
-                <div class="nav-button">| <a href="{{ url_for('show_contact_page') }}">Contact/Socials</a> |</button>
+                <div class="nav-button">| <a href="{{ url_for('contact') }}">Contact/Socials</a> |</button>
+                {% if current_user.is_authenticated %}
+                <div class="nav-button"> <a href="{{ url_for('logout') }}">Log Out</a> |</button>
+                {% endif %}
             </nav>
         
         </div> 
