fixed paragraph formatting

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -1,25 +1,25 @@
 {% include "header.html" %}
-<div class="secondary-header">
+<div class="center-text">
     <h2>About Me</h2>
 </div>
 <div class="main-content center-text">
-    <p>Hi, thanks for checking out my portfolio! My name is Mike, and I'm a hyper passionate programmer.
-    I'm 34 years old, and I've felt a powerful connection to computing ever since I was a little kid.
-    I've been learning Python since February 2023, and have devoted many hours to increasing my knowledge of the craft.
+    <p>My name is Mike, and I'm a hyper passionate programmer. Thanks for checking out my portfolio!</p> 
 
-    From online courses, to good old fashioned books, to binging on Primeagen videos
+    <p>I'm 34 years old, and I've felt a powerful connection to computing ever since I was a little kid.
+    In February 2023 I began learning python, and have devoted many hours to increasing my knowledge of the craft since then.</p>
+
+    <p>From online courses, to good old fashioned books, to binging on Primeagen videos
     and late nights tackling problems on CodeWars, I strived to get as much insight
-    and knowledge from various sources as possible.
+    and knowledge from various sources as possible.</p>
 
-    It's been a challenge at time, but that's a big part of the reason it's been so rewarding.
-    I loved the thrill of solving a problem and bending the digital world to my will.
-    It has been an immensely rewarding experience learning to interact with them more directly.
-    I found myself more capable of taking advantage of all the power a modern computer gives its user.
-    Implementing the concepts and skills I've spent so much time learning has consistently kept me motivated 
-    through the tough valleys of understanding.
-    It was this incredible sensation of growth and accomplish which lead me to specialize more in back-end oriented programming.
-    </p> 
-    <p>Please, take a moment to check out <a href={{ url_for('projects') }}>my projects</a>, or <a href={{ url_for('contact') }}>connect with me if you want to nerd out together.</a>
+    <p>It's been a challenge at time, but also a source of incredible joy.
+    I love the thrill of solving problems and bending the digital world to my will.</p>
+    <p>I found myself more capable of taking advantage of all the power a modern computer gives its user.
+    The feeling of growth and accomplishment implementing the concepts and skills I've spent so much time learning has consistently kept me motivated 
+    through the tough valleys of understanding. The carrot of increased understanding and new victories is constantly luring me forward.</p>
+    <p>Please, take a moment to check out
+    <a href={{ url_for('projects') }}>my projects</a>, or
+    <a href={{ url_for('contact') }}>connect with me if you want to nerd out together.</a>
     </p>
 </div>
 {% include "footer.html" %}
