added footer tag and moved body closing tag to just above html closing tag

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,7 @@
-</body>
-<div class="footer center-text">
-FOOTER GOES HERE C] 2024
-</div>
+        <footer>
+            <div class="footer center-text">
+                FOOTER GOES HERE C] 2024
+            </div>
+        </footer>
+    </body>
 </html>
