--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 .main-content {
     width: 50%;
 }
+
 .header {
     display: flex;
     flex-flow: column;
@@ -29,32 +30,40 @@
 .container {
     display: flex;
     flex-direction: column;
+    justify-content: left;
 }
 
-.secondary-header {
-    text-align: center;
+.container > *:last-child {
+    margin-bottom: 10em;
 }
 
 .project-row {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    justify-content: left;
+    
+}
+
+/* .project-row > :first-child {
+    align-self: left;
+}
+*/
+
+.container:last-child .project-view-container {
+    align-items: left;
+    justify-self: left;
 }
 
 .project-view-container {
     display: flex;
     flex-flow: column;
     flex: .4;
-    border: 2px solid yellow;
     align-items: normal;
-}
-
-.project-view-container:first-child {
-    margin-right: 5%;
-}
-
-.project-title {
-    text-align: center;
+    justify-content: space-around;
+    margin-bottom: 3em;
 }
 
 .project-images {
