--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -2,7 +2,7 @@
 <div class="center-text">
     <h2>About Me</h2>
 </div>
-<div class="main-content center-text">
+<div class="body-text center-text">
     <p>My name is Mike, and I'm a hyper passionate programmer. Thanks for checking out my portfolio!</p> 
 
     <p>I'm 34 years old, and I've felt a powerful connection to computing ever since I was a little kid.
