--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,9 +4,13 @@
 </div>
 
 <div class="container center-horizontal">
+    {% set unfinished_row = "" %}
     {% for project_row in projects %}
+        {% if projects|length % 2 == 1 and project_row.id == projects|length - 1 %}
+            {% set unfinished_row = "unfinished-row" %}
+        {% endif %}
         {% if project_row.id % 2 == 0 %}
-    <div class="project-row">
+        <div class="project-row {{ unfinished_row }}">
         {% endif %}
         <div class="project-view-container">
 
@@ -28,7 +32,7 @@
             </div>
 
         </div>
-        {% if project_row.id % 2 == 1 or project_row.id == projects|length - 1 %}
+        {% if loop.index % 2 == 0 or project_row.id == projects|length - 1 %}
     </div>
         {% endif %}
     {% endfor %}
