HOLY SHIT I'M ACTUALLY MAKING PROCESS AND STARTING TO UNDERSTAND FLEX

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,3 +1,5 @@
+<!-- CAN I GET THE SPACING RIGHT BY USING AN EMPTY DIV WHEN -->
+<!-- THE # OF PROJECTS IS ODD??-->
 {% include "header.html" %}
 <div class="center-text">
     <h2>My Projects</h2>
