--- a/static/styles.css
+++ b/static/styles.css
@@ -1,13 +1,8 @@
-.center-horizontal {
-  display: flex; /* Make the parent a flex container */
-  flex-direction: column;
-  justify-content: center; /* Center children along the main axis (horizontal) */
-}
-
-.container {
-    display: flex;
-}
-
+/* .center-horizontal {
+/*   display: flex; /* Make the parent a flex container */
+/*   flex-direction: column;
+/*   justify-content: center; /* Center children along the main axis (horizontal) */
+/* }*/
 .body-text p {
     width: 50%;
 }
@@ -35,18 +30,26 @@
     margin: auto;
 }
 
+.container {
+    border: dashed blue;
+    min-width: 80%;
+    margin: 0 10%;
+    width: 80rem;
+    display: flex;
+    flex-direction: column;
+}
+
 .project-row {
-    justify-content: space-evenly;
+    display: flex;
+    border: solid red;
 }
 
 .project-view-container {
     display: flex;
-    flex-wrap: wrap;
     flex-flow: column;
-    flex: 50%;
     align-items: normal;
     justify-content: space-around;
-    margin-bottom: 3em;
+    border: solid black;
 }
 
 .project-images {
