--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,4 +2,22 @@
 <div class="center-text">
     <h2>Contact Me</h2>
 </div>
+<div class="container">
+    <div class="center-icon body-text">
+        <ul>
+            <li>
+                <span class="fa-brands fa-github"></span>
+                <a href="https://github.com/Taky0nDon">Github</a>
+            </li>
+            <li>
+                <span class="fa-brands fa-linkedin"></span>
+                <a href="https://www.linkedin.com/in/mmaggio9489">LinkedIn</a>
+            </li>
+            <li>
+                <span class="fa-solid fa-blog"></span>
+                <a href="">Journey to the Center of a Bit (my blog)</a>
+            </li>
+        </ul>
+    </div>
+</div>
 {% include "footer.html" %}
