--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,15 @@
-        <footer>
-            <div class="footer center-text">
-                FOOTER GOES HERE C] 2024
+</div>
+    <footer>
+        <div class="footer center-text">
+            <div class="footer-row-container">
+                <span class="fa-brands fa-github"></span>
+                <span class="fa-brands fa-linkedin"></span>
+                <span class="fa-solid fa-blog"></span>
             </div>
-        </footer>
-    </body>
+            <div>
+            C] 2024
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
