--- a/templates/header.html
+++ b/templates/header.html
@@ -9,11 +9,10 @@
 
         <title> Portfolio </title>
         <script src='../static/script.js'></script>
+        <script src="https://kit.fontawesome.com/d8685a85b2.js" crossorigin="anonymous"></script>
     </head>
-
-
     <body>
-        <div class="center-horizontal header">
+        <div class="container">
             <img class="top-img" src="../static/img/top-img.webp"/>
 
             <!-- Navigation-->
@@ -40,4 +39,3 @@
                 {% endif %}
             </nav>
         
-        </div> 
