--- a/static/styles.css
+++ b/static/styles.css
@@ -1,9 +1,5 @@
-/* .center-horizontal {
-/*   display: flex; /* Make the parent a flex container */
-/*   flex-direction: column;
-/*   justify-content: center; /* Center children along the main axis (horizontal) */
-/* }*/
-.body-text p {
+.body-text {
+    margin: 0 25%;
     width: 50%;
 }
 
@@ -31,25 +27,28 @@
 }
 
 .container {
-    border: dashed blue;
-    min-width: 80%;
     margin: 0 10%;
-    width: 80rem;
     display: flex;
     flex-direction: column;
 }
 
+.row-container {
+    display: flex;
+    gap: 10em;
+    margin: 0em 40em;
+}
+
 .project-row {
     display: flex;
-    border: solid red;
+    justify-content: space-between;
 }
 
 .project-view-container {
+    margin: 0 0 2% 0;
     display: flex;
     flex-flow: column;
+    max-width: 45%;
     align-items: normal;
-    justify-content: space-around;
-    border: solid black;
 }
 
 .project-images {
@@ -66,6 +65,7 @@
     width: 50%;
 
 }
+
 .project-description {
     margin: 0 auto;
     width: 50%;
