--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 
 <!-- Main Content -->
-<div class="body-text center-text">
-    <p class="intro"> Welcome to my portfolio page. Here I will showcase
+<div class="body-text">
+    <p> Welcome to my portfolio page. Here I will showcase
     some of the things I have made since I endeavoured to learn Python in February
     2023. I will also share a little bit more about myself and what motivates
     me.
